--- a/Spring-Boot-MyBatis/src/main/resources/application.yml
+++ b/Spring-Boot-MyBatis/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     # 数据库访问配置, 使用druid数据源 com.alibaba.druid.pool.DruidDataSource
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://116.62.138.222:3306/dxyl_pumian?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true
+    url: jdbc:mysql://127.0.0.1:3306/zuji?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true
     username: root
     password: dxyl123456
     druid:
