--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,8 @@
-*/target/
+*/.idea/
+*/.mvn/
 */logs/
-
-### STS ###
-*/.apt_generated
-*/.classpath
-*/.factorypath
-*/.project
-*/.settings
-*/.springBeans
-*/.sts4-cache
-
-### IntelliJ IDEA ###
-*/.idea
-*/*.iws
+*/target/
+*/HELP.md
+*/mvnw
+*/mvnw.cmd
 */*.iml
-*/*.ipr
-
-### NetBeans ###
-*/nbproject/private/
-*/nbbuild/
-*/dist/
-*/nbdist/
-*/.nb-gradle/
-*/build/
-
-### VS Code ###
-*/.vscode/
