--- a/Spring-Boot-MyBatis/.gitignore
+++ b/Spring-Boot-MyBatis/.gitignore
@@ -1,32 +1,8 @@
-HELP.md
-target/
+.idea/
+.mvn/
 logs/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**
-!**/src/test/**
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
+target/
+HELP.md
+mvnw
+mvnw.cmd
 *.iml
-*.ipr
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-
-### VS Code ###
-.vscode/
